fix: fixed spacing issue

--- a/client/src/styles/sass/banner.scss
+++ b/client/src/styles/sass/banner.scss
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 .banner{
+
+    @media screen and (max-width:940px) {
+        margin-bottom:100px;
+    }
+
     width:100%;
     min-height: calc(100vh - 60px);
     display: flex;
